# immaterium

./: .gitignore  CONTEXT_MENU_FIX.md  Cargo.toml  Clarifications  DESIGN.md  LICENSE  MILESTONES.md  Next_steps.md  PROGRESS_SUMMARY.md  README.md  THEME_TESTING.md  test_themes.md
config/: default.toml
migrations/: 001_initial_schema.sql
src/: lib.rs  main.rs
src/ai/: context.rs  engine.rs  mod.rs  provider.rs
src/ai/providers/: groq.rs  mod.rs  ollama.rs  openai.rs
src/config/: loader.rs  mod.rs  schema.rs
src/core/: block.rs  database.rs  export.rs  manager.rs  mod.rs  session.rs  session_manager.rs
src/mcp/: manager.rs  mod.rs
src/shell/: executor.rs  mod.rs  process.rs
src/syntax/: highlighter.rs  mod.rs
src/theme/: loader.rs  mod.rs  schema.rs
src/ui/: ai_panel.rs  app.rs  block_widget.rs  mod.rs
src/utils/: keybindings.rs  mod.rs  syntax.rs
tests/: ai_context_demo.rs  ai_providers_integration.rs  integration_tests.rs  ui_context_menu_test.rs
themes/: README.md  dark.toml  high_contrast.toml  light.toml  warp.toml
