[package]
name = "immaterium"
version = "0.1.0"
edition = "2021"
authors = ["Immaterium Contributors"]
description = "A modern AI-powered terminal emulator with block-based workflows and MCP integration"
license = "MIT"
repository = "https://github.com/yourusername/immaterium"
readme = "README.md"
keywords = ["terminal", "ai", "warp", "mcp", "shell"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# GUI Framework
egui = "0.28"
eframe = { version = "0.28", default-features = true, features = ["default_fonts", "glow", "persistence"] }

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
directories = "5.0"

# Shell/PTY
portable-pty = "0.8"
nix = { version = "0.29", features = ["process", "signal", "term"] }

# Syntax Highlighting
syntect = "5.2"

# HTTP Client for AI APIs
reqwest = { version = "0.12", features = ["json", "stream"] }
async-openai = "0.24"

# Additional UI
egui_extras = { version = "0.28", features = ["all_loaders"] }
egui_code_editor = "0.2"

[dev-dependencies]
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "immaterium"
path = "src/main.rs"
